Center the main element with class name app

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+.app{
+  border: 1px solid red;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
